fix: Sửa lỗi spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -144,6 +144,15 @@ body {
     color: var(--gray);
 }
 
+.feature__item {
+    flex-direction: column;
+}
+
+.feature__item img {
+    width: 56px;
+    height: 56px;
+}
+
 /* collection */
 .image-list {
     background-color: var(--pink-light);
@@ -177,6 +186,10 @@ body {
 }
 
 /* product list */
+.product-list.pd-section {
+    padding-bottom: calc(52px - 9px - var(--gutter));
+}
+
 .product__item h3{
     margin: 0;
     margin-top: 8px;
@@ -317,6 +330,7 @@ body {
     line-height: 1.3;
     max-width: 120px;
     color: var(--gray);
+    z-index: 1;
 }
 
 /* product sale */
